<resources>
    <string name="about_us_content" translatable="true"><![CDATA[

    This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. See http://www.gnu.org/licenses<br/><br/>
    This app is based on \'Flym RSS Reader\', Copyright 2013–2016 Frédéric Julian, under the GNU GPL.<br/>


    <br/>

    <a href=\"https://handynewsreader.blogspot.com/\">Website</a>  <br/>

    <br/>
    Link to <a href=\"https://play.google.com/store/apps/details?id=ru.yanus171.feedexfork\">Google Play</a>  <br/>

    <br/>
    Link to <a href=\"https://forum.xda-developers.com/android/apps-games/app-flym-fork-rss-reader-t3802126\">XDA forum</a>  <br/>

    <br/>
    <a href=\"mailto:workyalex@mail.ru?subject=Handy News Reader question\">Mail to developer</a><br/>

    <br/>

    Among features added to this fork are:<br/>
    • feed group exanding<br/>
    • invisible fullscreen page up|down buttons<br/>
    • max image per feed download count<br/>
    • ability to cancel refresh process<br/>
    • ...<br/>

    <br/>
    <b>To help the project:</b><br/>
    - <a href=\"https://play.google.com/store/apps/details?id=ru.yanus171.feedexfork\">rate </a> the app <br/>
    - <a href=\"mailto:workyalex@mail.ru?subject=Handy News Reader idea\">suggest</a> an idea

    <br/>
    Sources on <a href=\"https://github.com/yanus171/Flym\">GitHub</a> <br/>

    <br/>
    <b>Developers:</b><br/>
    • eighthave<br/>
    • equiem<br/>
    • Frédéric Julian<br/>
    • madx666<br/>
    • Mikko Huhtala<br/>
    • Paul Schaub<br/>
    • RyDroid<br/>
    • Sergii Pylypenko<br/>
    • Shapochkin Mihail<br/>
    • Suyash Bhatt<br/>
    • Zhaofeng Li<br/>
    • yanus171<br/>

    <br/>
    <b>Translators:</b><br/>
    • Aitor Beriain<br/>
    • Benjamin Schütte<br/>
    • Changwoo Ryu<br/>
    • chenjia404<br/>
    • Danilo Treffiletti<br/>
    • Enric Morales<br/>
    • Jaroslav Lichtblau<br/>
    • Jozef Jaroščiak<br/>
    • Matthias Dill<br/>
    • Mladen Pejaković<br/>
    • Ronny Steiner<br/>
    • Thomas Leigh<br/>
    <br/>


    ]]></string>
    <string name="app_name">Handy News Reader</string>
    <string name="about_flym">About the app / Help / Contact developer </string>
    <string name="welcome_title">Welcome to Handy News Reader. Would you like to add a feed?</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="updating">Updating...</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="flym_feeds">Handy News Reader Feeds</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add a feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit a feed</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add a group</string>
    <string name="menu_import">Import from an OPML file</string>
    <string name="menu_export">Export to an OPML file</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="filter_is_regex">...is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title or link address</string>
    <string name="context_menu_share_starred">Share starred entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_font_bold">Bold font</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_cancel_refresh">Cancel update</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_toogle_unread_all">Unread|All</string>
    <string name="menu_load_all_images">Load all images</string>
    <string name="menu_mark_as_favorite">Mark as favorite</string>
    <string name="menu_mark_as_unfavorite">Unmark as favorite</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="menu_reload_full_text">Reload full text</string>
    <string name="menu_reload_full_text_without_mobilizer">Reload without Mobilizer</string>
    <string name="open_link">Open link</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_description">Enable notifications in case of new entries</string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_description">Enable the vibration on new entries</string>
    <string name="settings_notifications_light">Light</string>
    <string name="settings_notifications_light_description">Enable notification light on new entries</string>
    <string name="settings_light_theme">Light theme</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_display_oldest_first">Articles order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="settings_display_text_color">Text brightness</string>
    <string name="settings_max_image_download_count">Max image download count</string>
    <string name="settings_display_text_color_description">In dark theme (0..255)</string>
    <string name="settings_content_extract_rules">Content extract rules</string>
    <string name="settings_content_extract_rules_description">Set for each site (base HTML knowledge needed)</string>
    <string name="settings_tapZones">Tap Zones preview</string>
    <string name="settings_additional">Additional</string>
    <string name="settings_load_comments">Load comments</string>
    <string name="settings_load_comments_description">In articles\' full text</string>
    <string name="settings_tap_zones_dialogtitle">only for info, changes unavailable</string>
    <string name="settings_max_image_download_count_description">Per one article</string>
    <string name="settings_remember_last_entry">Remember last article</string>
    <string name="settings_remeber_last_entry_description">Open last viewed article on startup, otherwise unread entries list</string>
    <string name="pageUp">page up / swipe down to (un)star</string>
    <string name="pageDown">page down</string>
    <string name="fullScreenToggle">Full screen toggle</string>
    <string name="settings_refresh_only_selected">Only selected</string>
    <string name="settings_refresh_only_selected_summary">Auto refresh only checked feeds</string>
    <string name="actionBarToggle">Toggle action bar</string>
    <string name="settings_show_tap_zones">Tap Zones are visible</string>
    <string name="settings_show_tap_zone_description">As transparent squares in entry view</string>
    <string name="settings_max_image_download_size_kb">Max image size</string>
    <string name="settings_max_image_download_size_kb_summary">(in kb). Do not auto load images larger than</string>
    <string-array name="settings_volume_buttons_action">
        <item>Default</item>
        <item>Switch to next | previous article</item>
        <item>Page up | down</item>
    </string-array>
    <string name="share_all_text">Share whole text</string>
    <string name="show_progress_info">Detailed progress technical info</string>
    <string name="show_progress_info_descr">Show detailed info about current operation</string>
    <string name="show_article_url">Show article URL</string>
    <string name="show_article_icon">Show article icon</string>
    <string name="show_article_icon_descr">Turn off to gain more space of the screen</string>
    <string name="settings_category_article_list">Articles\' list</string>
    <string name="settings_category_article_text">Article\'s text</string>
    <string name="vibrate_on_article_list_entry_swype">Vibrate on swipe</string>
    <string name="vibrate_on_article_list_entry_swype_summary">On article list entry and in article text window while starring</string>
    <string name="show_mark_all_as_read_button">Mark all as read button</string>
    <string name="show_mark_all_as_read_button_summary">Show Mark all articles as read button - otherwise You will find this option in menu</string>
    <string name="lock_orientation">Landscape orientation</string>
    <string name="markAsStarred">Mark as starred</string>
    <string name="settings_entry_margins">Margins</string>
    <string name="settings_entry_margins_description">Left | right</string>
    <string name="entry_text_align_justify">Justified text</string>
    <string name="entry_text_align_justify_description">Otherwise align to the left</string>
    <string name="reload_full_text_with_tags">Reload with tags</string>
    <string name="global_filter">Global filter...</string>
    <string name="global_filter_descr">A filter that apply to every feed - leave filter text (and regex text) empty to disable</string>
    <string name="global_marks_as_star_filter_apply_to_title_descr">otherwise apply to content</string>
    <string name="rule_text">Rule\'s text</string>
    <string name="settings_min_update_battery_level">Min. battery level</string>
    <string name="global_marks_as_star_filter_rule_descr">a rule per line</string>
    <string name="show_read_article_count">Show read article count</string>
    <string name="show_read_article_count_descr">In feed list</string>
    <string name="auto_unstart_at_bottom">Auto unstar when finish reading</string>
    <string name="auto_unstart_at_bottom_descr">Auto remove the article from Favorites when the article bottom was reached</string>
    <string name="show_full_text_indicator">Full text indicator</string>
    <string name="show_full_text_indicator_descr">Show small diskette icon to indicate that article full text was loaded</string>
    <string name="show_read_checkbox">Read checkbox</string>
    <string name="show_read_checkbox_descr">Show small checkbox to indicate that article is read</string>
</resources>