<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_star"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/social_share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_full_screen"
        android:icon="@drawable/full_screen"
        android:title="@string/menu_full_screen"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_copy_clipboard"
        android:icon="@drawable/content_copy"
        android:title="@string/menu_copy_clipboard"/>
    <item
        android:id="@+id/menu_mark_as_unread"
        app:showAsAction="always"
        android:icon="@drawable/rounded_checbox_white"
        android:title="@string/menu_mark_as_unread"/>
    <item
        android:id="@+id/menu_mark_as_favorite"
        android:icon="@drawable/rating_important"
        android:title="@string/menu_mark_as_favorite"/>
    <item
        android:id="@+id/menu_mark_as_unfavorite"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_mark_as_unfavorite"/>
    <item
        android:id="@+id/menu_font_bold"
        android:title="@string/menu_font_bold"/>
    <item
        android:id="@+id/menu_reload_full_text"
        android:icon="@drawable/refresh"
        android:title="@string/menu_reload_full_text"/>
    <item
        android:id="@+id/menu_reload_full_text_without_mobilizer"
        android:title="@string/menu_reload_full_text_without_mobilizer"/>
    <item
        android:id="@+id/menu_reload_full_text_with_tags"
        android:title="@string/reload_full_text_with_tags"/>
    <item
        android:id="@+id/menu_load_all_images"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_load_all_images"/>
    <item
        android:id="@+id/menu_share_all_text"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_all_text"/>
    <item
        android:id="@+id/menu_open_link"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/open_link"/>
    <item
        android:id="@+id/menu_cancel_refresh"
        android:icon="@drawable/ic_action_cancel_gray"
        android:visible="true"
        android:title="@string/menu_cancel_refresh"/>
    <item
        android:id="@+id/menu_lock_land_orientation"
        android:title="@string/lock_orientation"
        android:checkable="true"/>
</menu>

