<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="status"
        android:visibility="invisible"
        android:layout_gravity="left|top"
        android:gravity="left|top" />
    <RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/pageUpBtn"
            style="@style/TapZone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:text="@string/pageUp"/>

        <TextView
            android:id="@+id/pageDownBtn"
            style="@style/TapZone"
            android:text="@string/pageDown"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/pageDownBtnVert"
            style="@style/TapZone"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/pageDown"/>

        <TextView
            android:id="@+id/toggleFullScreenStatusBarBtn"
            style="@style/TapZone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:textSize="10dp"
            android:text="@string/fullScreenToggle"/>

        <TextView
            android:id="@+id/toggleFullscreenBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_background"
            android:textSize="10dp"
            android:text="@string/actionBarToggle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/layoutBottom"
            android:visibility="invisible">
        <TextView
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="21:26"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="bottom"
            android:progressBackgroundTint="#00000000"
            android:progressTint="#FF777777"
            android:max="100"
            android:progress="33"
            android:indeterminateOnly="false"
            android:indeterminate="false"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:paddingTop="0dp" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/videoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>